--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,11 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
-
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-validator</artifactId>
+    <version>6.2.0.Final</version>
+</dependency>
         <!-- PostgreSQL Driver -->
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -55,39 +59,18 @@
             <optional>true</optional>
         </dependency>
 
-        <!-- Spring Boot Starter Test for unit testing -->
+        <!-- Spring Boot Starter Test for unit testing (includes JUnit 5 and Mockito) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
 
-        <!-- JUnit Jupiter API (JUnit 5) -->
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>5.8.0</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- JUnit Jupiter Engine (JUnit 5) -->
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.8.0</version>
-            <scope>test</scope>
-        </dependency>
-<dependency>
-    <groupId>jakarta.validation</groupId>
-    <artifactId>jakarta.validation-api</artifactId>
-    <version>3.0.2</version>
-</dependency>
-
         <!-- Mockito for Mocking in Tests -->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>4.0.0</version>
+            <version>4.3.1</version> <!-- Update to the latest stable version -->
             <scope>test</scope>
         </dependency>
 
@@ -95,9 +78,17 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>4.0.0</version>
+            <version>4.3.1</version> <!-- Update to the latest stable version -->
             <scope>test</scope>
         </dependency>
+
+        <!-- Jakarta Validation API (for validation annotations like @NotNull) -->
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.0.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
